# khan

khan/: Cargo.toml
khan-macros/: Cargo.toml
khan-macros/src/: derive_entity.rs  derive_fields.rs  func_construct_filter.rs  func_construct_update.rs  lib.rs  prelude.rs  utils.rs
khan/src/: guides.rs  lib.rs  meta.rs  types.rs
