[package]
name = "khan-macros"
description = "Macros for Khan crate"
version = "0.0.1"
edition = "2024"
authors = ["Kit Isaev <14875494+nikis05@users.noreply.github.com>"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
darling = "0.20.11"
either = "1.15.0"
heck = "0.5.0"
itertools = "0.14.0"
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
