[package]
name = "khan"
description = "A MongoDB ORM"
version = "0.0.1"
edition = "2024"
authors = ["Kit Isaev <14875494+nikis05@users.noreply.github.com>"]
license = "MIT"

[dependencies]
dashmap = "6.1.0"
futures-util = "0.3.31"
mongodb = "3.2.3"
serde = "1.0.219"
khan-macros = { version = "0.0.1", path = "../khan-macros" }
chrono = "0.4.40"
